# ld

./: .gitmodules  CMakeLists.txt
src/: ld.cpp
